--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ a:active {
 }
 
 .sec-proj p {
-  font-size: 24px;
+  font-size: 20px;
   color: #9b9b9b;
   text-align: left;
   line-height: 34px;
@@ -251,6 +251,29 @@ footer {
   .sec-newsletter p {
       font-size: 19px;
     }
+    
+  .sec-proj {
+  padding: 5vh 5vw 5vh 5vw;
+  margin: 0 0 0 0;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: stretch;
+  max-width : 100%
+  }
+    
+  .sec-proj p {
+  font-size: 18px;
+  color: #9b9b9b;
+  padding: 0vh 3vw 1vh 0vw;
+  text-align: left;
+  line-height: 34px;
+  width:90vw;
+  }
+    
+.sec-proj img {
+  width:85vw;
+  padding-bottom:3vh;
+  }
   
     
   .sec-intro {
@@ -298,21 +321,27 @@ footer {
  
     /* Text Size */
   .sec-intro h1 {
-  font-size: 30px;
+  font-size: 23px;
+  line-height : 40px;
+  padding-bottom : 100px;
+  padding-top : 50px;
   }  
     
   .sec-main h2 {
-  font-size: 25px;
+  font-size: 20px;
+  line-height : 30px;
   }
     
   .sec-main p {
-  font-size: 20px;
+  font-size: 17px;
+  line-height : 35px;
   }
     
   .sec-middle h3 {
   font-size: 22px;
 
   }
+    
   
   .sec-intro {
   padding: 5vh 0vw 5vh 2vw;
@@ -324,23 +353,43 @@ footer {
     margin: 0 0 0 0;
   }
 
+ 
+    
+  .sec-p {
+    padding: 0vh 0vw 0vh 0vw;
+    margin: 0 0 0 0;
+  }
+  
   .sec-faq {
     padding: 0vh 0vw 0vh 0vw;
     margin: 0 0 0 0;
   }
-
-  .sec-proj {
-    padding: 0vh 0vw 0vh 0vw;
-    margin: 0 0 0 0;
+    
+  .sec-faq h4 {
+  padding-top : 50px;
+  padding-bottom : 10px;
+  font-weight: Normal;
   }
+  
+  .sec-faq a {
+  font-size : 18px;
+  }
+  
+  .sec-faq p {
+  font-weight: Normal;
+  font-size : 18px;
+  }
+
+
+    
   .sec-middle {
-    padding: 0vh 0vw 5vh 2vw;
+    padding: 20vh 0vw 15vh 2vw;
 
   }
 
 
   .sec-newsletter {
-    padding: 0vh 0vw 10vh 2vw;
+    padding: 0vh 0vw 10vh 0vw;
     margin: 0 0 0 0;
   }
 
@@ -371,7 +420,8 @@ footer {
   }
     
   .sec-main p {
-  font-size: 21px;
+  font-size: 17px;
+  line-height : 35px;
   }
     
     
@@ -390,16 +440,11 @@ padding: 5vh 0vw 5vh 5vw;
   margin: 0 0 0 0;
   }
     
-.sec-proj {
-    padding: 5vh 0vw 5vh 5vw;
-  margin: 0 0 0 0;
-  }
-
-
 
   .sec-middle {
   padding: 5vh 0vw 5vh 5vw;
   margin: 0 0 0 0;
+    
   }
 
 
@@ -431,7 +476,7 @@ padding: 5vh 0vw 5vh 5vw;
   }
 
   .sec-main {
-   padding: 5vh 0vw 5vh 5vw;
+   padding: 5vh 0vw 5vh 0vw;
   margin: 0 0 0 0; 
   }
 
@@ -486,11 +531,13 @@ padding: 5vh 0vw 5vh 5vw;
   .sec-middle {
 
   }
-
+  
 
   .sec-newsletter {
     
   }
+    
+  
 
 
   footer {
@@ -724,12 +771,14 @@ padding: 5vh 0vw 5vh 5vw;
   .sec-newsletter {
     
   }
+  
+  
 
 
   footer {
     
   }
-t
+
 }
 
 
@@ -852,6 +901,62 @@ t
 } 
 
 
+
+
+@media screen 
+  and (min-device-width: 480px) 
+  and (max-device-width: 767px)  { 
+    
+   .sec-intro {
+    padding: 20vh 10vw 5vh 10vw;
+    margin: 0 0 0 0;
+  }
+    
+  .sec-proj {
+  padding: 5vh 5vw 5vh 5vw;
+  margin: 0 0 0 0;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: stretch;
+  max-width : 100%
+  }
+    
+  .sec-proj p {
+  font-size: 18px;
+  color: #9b9b9b;
+  padding: 0vh 3vw 1vh 0vw;
+  text-align: left;
+  line-height: 34px;
+  width:90vw;
+  }
+    
+.sec-proj img {
+  width:85vw;
+  padding-bottom:3vh;
+  }
+
+  .sec-main {
+    
+  }
+
+  .sec-faq {
+    
+  }
+
+  .sec-middle {
+
+  }
+
+
+  .sec-newsletter {
+    
+  }
+
+
+  footer {
+    
+  }
+}
 
 
 
