🚨🎌 Updated with Glitch

--- a/index.njk
+++ b/index.njk
@@ -68,7 +68,7 @@ We started this group after realising that it's really difficult to get creative
 Our mission is to create a cozy, safe, and inspiring online space where emerging creators can help each other find creative footing, and successfully ship their projects out in the world.
 </p>
 
-<img class="tf_images" src="https://cdn.glitch.com/88b0616c-3f0c-4d6f-a529-e928070e556d%2FScreenshot%202020-10-19%20at%2012.52.17%20AM.png?v=1610361196004" alt="meetup pic">
+<img class="tf_images" src="https://cdn.glitch.com/88b0616c-3f0c-4d6f-a529-e928070e556d%2Ffigma_meetup.png?v=1608127297483" alt="meetup pic">
 
 <p class = "photo_description">
 Meeting up in Figma to reflect on our journey as a maker
