--- a/members.njk
+++ b/members.njk
@@ -39,7 +39,7 @@ eleventyNavigation:
 
 </div>
 
-<h3 class="page_top">Our members consists of designers, artists, technologists and many more.</h3>
+<h3 class="page_top">Our members consists of designers, artists, technologists and many more</h3>
 <br>
 <br>
 <p class="separater_line"></p>
