--- a/members.njk
+++ b/members.njk
@@ -8,7 +8,7 @@ eleventyNavigation:
 
 <div class="container">
 
-<div class="ascii" style="font-weight:800; font-size: 14px; margin-top:10px"> 
+<div class="ascii medium-ascii" > 
 
        ___        __   ___  __   __  
  |\/| |__   |\/| |__) |__  |__) /__` 
@@ -23,7 +23,7 @@ eleventyNavigation:
 
 
 
-<div class="ascii" style="font-size:9px; margin-bottom: 30px;"> 
+<div class="ascii small-ascii"> 
 
      __________ __         __________ __         __________ __
     |    ___  _|__|_      |     ◊   _|__|_      |         _|__|_
@@ -39,7 +39,7 @@ eleventyNavigation:
 
 </div>
 
-<h3 class="page_top">Our members consists of designers, artists, technologists and many more</h3>
+<h3 class="page_top">Our members consists of designers, artists, technologists and many more.</h3>
 <br>
 <br>
 <p class="separater_line"></p>
