--- a/projects.njk
+++ b/projects.njk
@@ -8,7 +8,7 @@ eleventyNavigation:
 <div class="container">
 
 
-<div class="ascii" style="font-weight:800; font-size: 13px; margin-top:10px"> 
+<div class="ascii medium-ascii" > 
 
  __   __   __        ___  __  ___  __  
 |__) |__) /  \    | |__  /  `  |  /__` 
@@ -19,7 +19,7 @@ eleventyNavigation:
 
 
 
-<div class="ascii" style="font-size:8px; margin-bottom: 30px;"> 
+<div class="ascii small-ascii" "> 
 
                .---._
            .--(. '  .).--.      . .-.
@@ -38,7 +38,7 @@ eleventyNavigation:
 
 </div>
 
-<h3 class="page_top">Experiments and projects shipped from our community.</h3>
+<h3 class="page_top">Experiments and projects released by our community members and their collaborators.</h3>
 <br>
 <br>
 <p class="separater_line"></p>
