--- a/css/colors-morning.css
+++ b/css/colors-morning.css
@@ -1,9 +1,17 @@
+/*
+Carrot Orange
+*/
+
 :root {
-  --background: #FFE4DD;
-  --imagefilter: #FFE4DD;
-  --text: #6C0ED4;
-  --links: #6C0ED4;
-  --ascii: #6C0ED4;
+  --background: #F9FFEA;
+  --imagefilter: #F9FFEA;
+  --text: #FE6433;
+  --links: #FE6433;
+  --ascii: #FE6433;
+}
+
+.profile-image{
+    filter: invert(18%) sepia(76%) saturate(6428%) hue-rotate(1deg) brightness(95%) contrast(82%);
 }
 
 html {
