--- a/support-us.njk
+++ b/support-us.njk
@@ -7,7 +7,7 @@ eleventyNavigation:
 
 <div class="container">
 
-<div class="ascii" style="font-weight:800; font-size: 14px; margin-top:10px"> 
+<div class="ascii medium-small-ascii"> 
 
  __        __   __   __   __  ___          __  
 /__` |  | |__) |__) /  \ |__)  |     |  | /__` 
@@ -16,7 +16,7 @@ eleventyNavigation:
 
 </div>
 
-<div class="ascii" style="font-size:10px; margin-bottom: 30px;"> 
+<div class="ascii small-ascii" "> 
 
 
                          (`  ).                   _           
@@ -35,13 +35,13 @@ eleventyNavigation:
 
 </div>
 
-<h3 class="page_top">A sustainable space for bon-fire conversations</h3>
+<h3 class="page_top">A sustainable space for<br/> bon-fire conversations</h3>
 
 <br>
 <br>
 <p class="separater_line"></p>
 
-<p>Tiny Factories is currently operated and moderated by three main staff members: Weiwei Hsu, William Felker and Tomo Kihara. Often times, spaces for bon-fire discussions about creative work fizzle out after a while because it’s all voluntary work. We are committed to making a long-lasting space.<p/>
+<p>Tiny Factories is currently operated and moderated by three main staff members: <a href="https://twitter.com/glitchyowl">Weiwei Hsu</a>, <a href="https://twitter.com/gndclouds">William Felker</a> and <a href="https://twitter.com/tomokihara">Tomo Kihara</a>. Often times, spaces for bon-fire discussions about creative work fizzle out after a while because it’s all voluntary work. We are committed to making a long-lasting space.<p/>
 
 <p>Early support in Tiny Factories is instrumental to the vibrancy of this group. We have planned out the development of Tiny Factories and compartmentalized them into 6 stages. As the number of members and supporters increase, members will enjoy an increased access of programming and support orchestrated by staff. Additionally, we will be able to dedicate more time into the design, development, and maintenance of Tiny Factories. If you are eager like we are to dedicate more time in the world of creative expression, we invite you to join us in making a space for finding creative footing that lasts.</p>
 
@@ -52,16 +52,12 @@ Our collective is composed of a group of creators working with different media a
 
 <p>+ Mentorship - have dialogues with us and provide us with guidance as we find our footing and voice as creators and indiepreneurs (this can be an one-time or a recurring engagement depending on your availability)</p>
 
-<p>+ Opportunities -</p>
-
 <p>+ Resources - As much as this is a journey to finding our footing, it is also a process of exploring and tinkering with ideas and tools.</p>
 
 
 <h2>What do I get as an individual partner?</h2>
 
-<p>If you are interested in becoming a studio or organizational partner and would like to explore ways in supporting, accessing, and collaborating with rising indiepreneurs, please contact us at <a>partnership@tinyfactories.space</a></p>
-
-<p>For any other questions related to gifting, sponsorship, and parntership, please email: <a>partnership@tinyfactories.space</a></p>
+<p>If you are interested in exploring ways to support, sponsor, and collaborate with rising indiepreneurs, or for any other questions, please email: <a>partnership@tinyfactories.space</a> </p>
 
 
 </div>
