--- a/join-us.njk
+++ b/join-us.njk
@@ -17,16 +17,7 @@ eleventyNavigation:
 
 </div>
 
-
-<div class="ascii medium-ascii" style="max-width=300px"> 
-
-       _          _          _          _          _  
-     >(')____,  >(')____,  >(')____,  >(')____,  >(') ___, 
-       (` =~~/    (` =~~/    (` =~~/    (` =~~/    (` =~~/ 
-    ~^~^`---'~^~^~^`---'~^~^~^`---'~^~^~^`---'~^~^~^`---'~^~^~
-
-
-</div>
+{% include "ascii/join-us-hero.njk" %}
 
 
 
