--- a/members.njk
+++ b/members.njk
@@ -22,22 +22,7 @@ eleventyNavigation:
 -->
 
 
-
-<div class="ascii small-ascii"> 
-
-     __________ __         __________ __         __________ __
-    |    ___  _|__|_      |     ◊   _|__|_      |         _|__|_
-    |  ,'   '. {'\)       |   ◊  ○   {'\)       |          {'\)
-    | :  O O  : )(        | ◊  ◊  ◊   )(        | ◼◼◼◼◼     )(
-    | :  ._\. :/ )\       |  ○  ◊\   / )\       |      \   / )\
-    |  '.___\\/ / |       |◊  ◊   \\/ / |       |       \\/ / |
-    |        '-'  |       | ◊      '-'  |       |        '-'  |
-    |_________|   |       |_________|   |       |_________|   |
-       /-----\|___|          /-----\|___|          /-----\|___|
-      /       \|||          /       \|||          /       \|||
-              .:;;                  .:;;                  .:;;
-
-</div>
+{% include "ascii/members-hero.njk" %}
 
 <h3 class="page_top">Our members consists of designers, artists, technologists and many more.</h3>
 <br>
