--- a/projects.njk
+++ b/projects.njk
@@ -17,26 +17,9 @@ eleventyNavigation:
 
 </div>
 
+{% include "ascii/projects-hero.njk" %}
 
 
-<div class="ascii small-ascii" "> 
-
-               .---._
-           .--(. '  .).--.      . .-.
-        . ( ' _) .)` (   .)-. ( ) '-'
-       ( ,  ).        `(' . _)
-     (')  _________      '-'
-     ____[_________]                                         ________
-     \__/ | _ \  ||    ,;,;,,                               [________]
-     _][__|(")/__||  ,;;;;;;;;,   __________   __________   _| LILI |_
-    /             | |____      | |          | |  ___     | |      ____|
-   (| .--.    .--.| |     ___  | |   |  |   | |      ____| |____      |
-   /|/ .. \~~/ .. \_|_.-.__.-._|_|_.-:__:-._|_|_.-.__.-._|_|_.-.__.-._|
-+=/_|\ '' /~~\ '' /=+( o )( o )+==( o )( o )=+=( o )( o )+==( o )( o )=+=
-='=='='--'==+='--'===+'-'=='-'==+=='-'+='-'===+='-'=='-'==+=='-'=+'-'====
-
-
-</div>
 
 <h3 class="page_top">Experiments and projects released by our community members and their collaborators.</h3>
 <br>
