--- a/support-us.njk
+++ b/support-us.njk
@@ -16,24 +16,7 @@ eleventyNavigation:
 
 </div>
 
-<div class="ascii small-ascii" "> 
-
-
-                         (`  ).                   _           
-                        (     ).              .:(`  )`.       
-                       _(       '`.          :(   .    )      
-                   .=(`(      .   )     .--  `.  (    ) )      
-       .--.       ((    (..__.:'-'   .+(   )   ` _`  ) )                 
-     _(    `.     `(       ) )       (   .  )     (   )  ._   
-    (        )      ` __.:'   )     (   (   ))     `-'.-(`  ) 
-   ( `  .  )  )  ( )       --'       `- __.'         :(      )) 
-    `--(___.-'  (_.'          .')                    `(    )  ))
-                             (_  )                     ` __.:'          
-                                                   
- ..-----.----..,___.--,--'`,---..-.--+--.,,-,,..._.--..-._.--..---.
-
-
-</div>
+{% include "ascii/support-us-hero.njk" %}
 
 <h3 class="page_top">A sustainable space for<br/> bon-fire conversations</h3>
 
@@ -50,10 +33,11 @@ eleventyNavigation:
 <p>
 Our collective is composed of a group of creators working with different media and we could all benefit from having additional guidance and support. While we don’t have a laundry list of ways for you to support us, here’s a small guide of how you might be able to support us:<p/>
 
-<p>+ Mentorship - have dialogues with us and provide us with guidance as we find our footing and voice as creators and indiepreneurs (this can be an one-time or a recurring engagement depending on your availability)</p>
+<p>+ Mentorship - Have dialogues with us and provide us with guidance as we find our footing and voice as creators and indiepreneurs (this can be an one-time or a recurring engagement depending on your availability)</p>
 
 <p>+ Resources - As much as this is a journey to finding our footing, it is also a process of exploring and tinkering with ideas and tools.</p>
 
+<p>+ Sponsorship - We maintain a <a href="https://ko-fi.com/tiny_factories">ko-fi</a> as a way for you to support our open source proejcts and members projects.</p>
 
 <h2>What do I get as an individual partner?</h2>
 
