--- a/_includes/ascii/hero.njk
+++ b/_includes/ascii/hero.njk
@@ -207,5 +207,21 @@
 </div>
 
 
+<div class="ascii_anismation ascii_landwing">      
+  
+  
+                                                                                                                      ✧     ✧
+                                                                                                                   .・゜    ∴
+                                   ^                          ^                                     ^          ___||_  .・ ゜                                     \hi/ 
+  ^  ^     ^   ^  ^      ^  ^     /|\  ^     ^   ^  ^     ^  /|\ ^      ^         ^     ^   ^    ^ /|\        /\  ___\||        ^      ^      ^  ^                ,~
+ /|\/|\   /|\ /|\/|\    /|\/|\    /|\ /|\ ^ /|\ /|\/|\   /|\ /|\/|\    /|\ ^     /|\ ^ /|\ /|\  /|\/|\ ^     /  \/\ __ _\      /|\  ^ /|\    /|\/|\               |\
+ /|\/|\   /|\ /|\/|\    /|\/|\    /|\ /|\/|\/|\ /|\/|\   /|\ /|\/|\    /|\/|\    /|\/|\/|\ /|\  /|\/|\/|\    | __  \_____\     /|\ /|\/|\    /|\/|\              /| \
+ /|\/|\   /|\ /|\/|\    /|\/|\    /|\ /|\/|\/|\ /|\/|\   /|\ /|\/|\    /|\/|\    /|\/|\/|\ /|\  /|\/|\/|\    | ||  |     |     /|\ /|\/|\    /|\/|\             /_|__\
+‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾''""~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+
+</div>
+
+
 
 </div>
