--- a/index.njk
+++ b/index.njk
@@ -9,7 +9,7 @@ eleventyNavigation:
 
 <div class="container">
 
-<h1> Tiny Factories is a community for people who are young in exploring their creative expressions</h1>
+<h1>Tiny Factories is a tribe of people supporting each other to establish their creative footing</h1>
 
 {% include "ascii/hero.njk" %}
 
