--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -1,24 +1,43 @@
 <!doctype html>
 <html lang="en">
   <head>
-     <title>{{ renderData.title or title or metadata.title }}/title>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    
-    <!-- Opengraph -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:title" content="{{ renderData.title or title or metadata.title }}">
-    <meta property="og:description" content="{{ renderData.description or description or metadata.description }}">
-    <meta property="og:image" content="">
-    <meta property="og:url" content="{{ metadata.feed.path | url }}">
-    
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <link rel="icon" type="image/jpeg" href="https://cdn.glitch.com/a350d2cb-17a7-4fa6-86f2-12d51aff6c68%2Ffavicon.jpeg?v=1613221712853" sizes="16x16">
+<link rel="icon" type="image/png" href="https://cdn.glitch.com/a350d2cb-17a7-4fa6-86f2-12d51aff6c68%2Ffavicon-32.png?v=1613222071098" sizes="32x32">
+    <link rel="icon" type="image/png" href="https://cdn.glitch.com/a350d2cb-17a7-4fa6-86f2-12d51aff6c68%2Ffavicon-128.png?v=1613222071099" sizes="128x128"> 
+<link rel="icon" type="image/png" href="https://cdn.glitch.com/a350d2cb-17a7-4fa6-86f2-12d51aff6c68%2Ffavicon-181.png?v=1613222071098" sizes="32x32">
+  <link rel="icon" type="image/png" href="https://cdn.glitch.com/a350d2cb-17a7-4fa6-86f2-12d51aff6c68%2Ffavicon-181.png?v=1613222071098" sizes="181x181"> 
+<link rel="icon" type="image/png" href="https://cdn.glitch.com/a350d2cb-17a7-4fa6-86f2-12d51aff6c68%2Ffavicon-192.png?v=1613222071098" sizes="192x192">
+  <link rel="icon" type="image/png" href="https://cdn.glitch.com/a350d2cb-17a7-4fa6-86f2-12d51aff6c68%2Ffavicon-196.png?v=1613222071098" sizes="196x196">
+  
+  
+  
+  <link rel="icon" href="favicon.ico" type="image/x-icon"/>
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
+
+  <!-- Primary Meta Tags -->
+  <title>{{ renderData.title or title or metadata.title }}</title>
+  <meta name="title" content="M{{ renderData.title or title or metadata.title }}">
+  <meta name="description" content="{{ renderData.description or description or metadata.description }}">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://tinyfactories.space">
+  <meta property="og:title" content="{{ renderData.title or title or metadata.title }}">
+  <meta property="og:description" content="{{ renderData.description or description or metadata.description }}">
+  <meta property="og:image" content="https://cdn.glitch.com/a350d2cb-17a7-4fa6-86f2-12d51aff6c68%2Fopen_graph.png?v=1613221026604">
+
   <!-- Twitter -->
-    <meta name="twitter:title" content="{{ renderData.title or title or metadata.title }}">
-    <meta name="twitter:description" content="{{ renderData.description or description or metadata.description }}">
-    <meta name="twitter:image" content="">
-    <meta name="twitter:card" content="summary_large_image">
-    
-    
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://tinyfactories.space">
+  <meta property="twitter:title" content="{{ renderData.title or title or metadata.title }}">
+  <meta property="twitter:description" content="{{ renderData.description or description or metadata.description }}">
+  <meta property="twitter:image" content="https://cdn.glitch.com/a350d2cb-17a7-4fa6-86f2-12d51aff6c68%2Fopen_graph.png?v=1613221026604">
+  
+
+
     <link rel="stylesheet" href="{{ '/css/index.css' | url }}">
     <link rel="stylesheet" href="{{ '/css/prism-base16-monokai.dark.css' | url }}">
     <link rel="alternate" href="{{ metadata.feed.path | url }}" type="application/atom+xml" title="{{ metadata.title }}">
@@ -48,12 +67,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
  
+
   <script language="JavaScript">
 <!--
 var space = "";
-var speed = "100";
+var speed = "1000";
 var pos = 0;
-var msg = "・゜✧.゜.";
+var msg = "・゜✧.・.";
 function Scroll()
 {
 document.title = msg.substring(pos, msg.length) + space + msg.substring(0,pos);
