--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -27,14 +27,14 @@
   <meta property="og:url" content="https://tinyfactories.space">
   <meta property="og:title" content="{{ renderData.title or title or metadata.title }}">
   <meta property="og:description" content="{{ renderData.description or description or metadata.description }}">
-  <meta property="og:image" content="https://cdn.glitch.com/a350d2cb-17a7-4fa6-86f2-12d51aff6c68%2Fopen_graph.png?v=1613221026604">
+  <meta property="og:image" content="https://cdn.glitch.com/a350d2cb-17a7-4fa6-86f2-12d51aff6c68%2Fopen-graph.png?v=1613224809339">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://tinyfactories.space">
   <meta property="twitter:title" content="{{ renderData.title or title or metadata.title }}">
   <meta property="twitter:description" content="{{ renderData.description or description or metadata.description }}">
-  <meta property="twitter:image" content="https://cdn.glitch.com/a350d2cb-17a7-4fa6-86f2-12d51aff6c68%2Fopen_graph.png?v=1613221026604">
+  <meta property="twitter:image" content="https://cdn.glitch.com/a350d2cb-17a7-4fa6-86f2-12d51aff6c68%2Fopen-graph.png?v=1613224809339">
   
 
 
