🚨🛋 Fixed the Nav unclickable problem

--- a/_includes/ascii/separate_animation.njk
+++ b/_includes/ascii/separate_animation.njk
@@ -1,4 +1,4 @@
-<div id = "plane_animation" class = "ascii" style="cursor: pointer;">
+<div id = "plane_animation" class = "ascii">
                                                                                                                                                                                                         
  _______________________                                                                                                                                                                                
 |    heyoooo welcome   | ---╲ -----◠-*                                                                                                                                                                
