--- a/css/index.css
+++ b/css/index.css
@@ -39,6 +39,7 @@
   overflow: hidden;
   speak: never;
   speak-as: spell-out;
+  z-index:-1;
 }
 
 .ascii_landing{
@@ -167,9 +168,10 @@ body {
   padding: 0;
   font-family: 'DM Mono', helvetica;
   color: var(--text);
-  background-color: var(--background);
   font-weight: 300;
   overflow-x: hidden;
+  
+  /*--background-color: var(--background);-*/  
   }
 
 
@@ -334,6 +336,7 @@ pre {
   list-style: none;
   text-align: center;
   line-height:1.7;
+
 }
 
 .nav-item {
